--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sun-tracker-js",
   "version": "1.0.0",
-  "description": "A simple library to check if it's after dawn or after sunset at a given location using suncalc",
+  "description": "A lightweight library that determines whether it's currently after sunrise or after sunset at a specified location, leveraging suncalc for accurate astronomical calculations.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
