--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "ES2020",
-      "lib": ["DOM", "ES2020"],
-      "strict": true,
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "forceConsistentCasingInFileNames": true,
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true
-    },
-    "include": ["src"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ES2020",
+    "lib": ["DOM", "ES2020"],
+    "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "moduleDetection": "force", // Ensure ES modules are detected
+    "allowSyntheticDefaultImports": true // Support default imports
+  },
+  "include": ["src"]
+}
